objects/CommandCenter__Deployment_Stage__c.object
<CustomObject>
    <fields>
        <fullName>CommandCenter__Build_Number__c</fullName>
        <label>Build Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Completion_Time__c</fullName>
        <label>Completion Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Deployment__c</fullName>
        <label>Deployment</label>
        <referenceTo>CommandCenter__Deployment__c</referenceTo>
        <relationshipLabel>Deployment Stages</relationshipLabel>
        <relationshipName>Deployment_Stages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Is_Deploy_Job__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Deploy Job?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Is_Standalone_Job__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Standalone Job?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Order__c</fullName>
        <label>Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Stage_Label__c</fullName>
        <label>Stage Label</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Stage_Level__c</fullName>
        <description>This field indicate the level of stage in jenkins pipeline. In case of parallel processing, add same level number. Ex. If Novasuite and TAS jobs are running parallel then there stage level should be same for example its 2.</description>
        <inlineHelpText>This field indicate the level of stage in jenkins pipeline. In case of parallel processing, add same level number. Ex. If Novasuite and TAS jobs are running parallel then there stage level should be same for example its 2.</inlineHelpText>
        <label>Stage Level</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Stage_URL__c</fullName>
        <label>Stage URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Status__c</fullName>
        <inlineHelpText>Stage status</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Failure</fullName>
                </value>
                <value>
                    <fullName>Aborted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Deployment Stage</label>
    <nameField>
        <label>Stage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deployment Stages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>